ecomerce-app-chart/ecommerce-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask-app
spec:
  type: LoadBalancer  
  ports:
    - port: 80        
      targetPort: 5000 
  selector:
    app: flask-app
